style: fix horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ body {
 
 #main {
   padding: 20px;
-  height: 100vh;
+  height: 100%;
   background-color: var(--beige-color);
 }
 
